@@ -1,15 +1,11 @@
 package controleur;
 
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
-
 import javax.swing.JButton;
 
 import modele.ICC;
@@ -27,7 +23,7 @@ public class GestionICC {
 		try {
 			fen.setTableICC(new DaoICC().findAll().stream()
 					.map(e -> e.getAnnee() + " T" + e.getTrimestre() + ": " + e.getIndiceICC())
-					.collect(Collectors.toList()));
+					.toList());
 			
 		} catch (Exception e) {
 			fen.afficherMessageErreur(e.getMessage());
@@ -36,9 +32,7 @@ public class GestionICC {
 	}
 	
 	public void gestionConfirmer(JButton btn) {
-		btn.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				
+		btn.addActionListener(e -> {
 				try {
 					new DaoICC().create(new ICC(fen.getAnnee(), fen.getTrimestre(), Integer.valueOf(fen.getIndice())));
 					chargerDonnee();
@@ -46,13 +40,11 @@ public class GestionICC {
 					fen.afficherMessageErreur(e1.getMessage());
 					e1.printStackTrace();
 				}
-			}
-		});
+			});
 	}
 
 	public void gestionSupprimer(JButton btn) {
-		btn.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
+		btn.addActionListener(e -> {
 				try {
 					List<String> identifiants = extraireIdIcc(fen.getSelectedLine());
 					ICC icc = new ICC(identifiants.get(0), identifiants.get(1), 0);
@@ -62,16 +54,11 @@ public class GestionICC {
 					fen.afficherMessageErreur(e1.getMessage());
 					e1.printStackTrace();
 				}
-			}
-		});
+			});
 	}
 
 	public void gestionAnnuler(JButton btn) {
-		btn.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				fen.dispose();
-			}
-		});
+		btn.addActionListener(e -> fen.dispose());
 	}
 	
 	public List<String> extraireIdIcc(String ligne){
